[gd_scene load_steps=6 format=3 uid="uid://cd2dgvodr3u8k"]

[ext_resource type="Script" uid="uid://dqjtx2pjfltf0" path="res://globals/assess_criterion_manager/assess_test.gd" id="1_mafoi"]
[ext_resource type="Theme" uid="uid://df2r57b2stnof" path="res://themes/ui.tres" id="1_uts2w"]
[ext_resource type="Script" uid="uid://dxavujg1j5jr5" path="res://globals/assess_criterion_manager/criteria/assess_criterion_variable_probability.gd" id="2_a22l4"]
[ext_resource type="PackedScene" uid="uid://55kp84v1di83" path="res://globals/assess_criterion_manager/assess_manager.tscn" id="2_uts2w"]
[ext_resource type="PackedScene" uid="uid://chw3reglhg6by" path="res://objects/ui/chart_visualizer/chart_visualizer.tscn" id="3_uts2w"]

[node name="AssessTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uts2w")
script = ExtResource("1_mafoi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AssessManager" parent="." instance=ExtResource("2_uts2w")]
criteria_scripts = Array[Script]([ExtResource("2_a22l4")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ButtonLeft" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Pewnik"

[node name="ButtonRight" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Loteria"

[node name="ButtonAdd" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "dodaj punkt"

[node name="ButtonIndifferent" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "obojÄ™tnie"

[node name="ButtonScenario" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "scenariusz"

[node name="ChartVisualizer" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_uts2w")]
unique_name_in_owner = true
layout_mode = 2
line_fill = null
axis_color = null

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonAdd" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonIndifferent" to="." method="_on_button_indifferent_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonScenario" to="." method="_on_button_scenario_pressed"]
